# life

./: Makefile  docker-compose.yaml
api/: Cargo.toml  Dockerfile
api/src/: main.rs
api/src/life/: controller.rs  mod.rs  service.rs
back/api/: Cargo.toml
back/api/src/: main.rs
back/api/src/entities/: mod.rs  prelude.rs  sim.rs  sim_stat.rs
back/api/src/sim/: controller.rs  entity.rs  mod.rs  service.rs
back/migration/src/: m20220101_000001_create_table.rs
front/: .gitignore  Dockerfile  Makefile  nginx.conf  package-lock.json  package.json  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
front/env/: .env.enc.production
front/src/: app.html  main.ts  registerSW.ts  sw.ts
front/src/assets/: app.css
front/src/lib/: Counter.svelte  Range.svelte  firebase.ts
front/src/routes/: +page.svelte  +page.ts
front/static/: firebase-messaging-sw.js
helm/: Chart.yaml  values.yaml
helm/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
helm/templates/tests/: test-connection.yaml
