[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10"
actix-web = "4"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
actix-cors = "0.7.0"

[dependencies.sea-orm]
version = "1.0.1"
features = [
  "sqlx-postgres",         # `DATABASE_DRIVER` feature
  "runtime-tokio-rustls",  # `ASYNC_RUNTIME` feature
  "debug-print",           # Enable debug-print feature to print query logs
]
